# neva-edu-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
neva-edu-bot/: __main__.py  bot.py  config.py  parser.py  service.py  types.py
src/: __main__.py  bot.py  parser.py  service.py  storage.py  types.py
